reservations bugs fixed
